# internal/app/delivery/http/blog/dto/blog.go
@@ -1,0 +1,10 @@
+package dto
+
+type UpdateBlogRequest struct {
+	NewName string `json:"new_name"`
+}
+
+type BlogResponse struct {
+	Name  string `json:"name"`
+	Owner string `json:"blog_owner"`
+}
