# internal/app/delivery/http/user/dto/user.go
@@ -6,7 +6,7 @@ type UserResponse struct {
 	Email    string `json:"email"`
 }
 
-type ChangePasswordRequest struct {
+type UpdatePasswordRequest struct {
 	OldPassword string `json:"old_password"`
 	NewPassword string `json:"new_password"`
 }
